Fri Aug 29 08:24:17 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/RTCORBA/RT_Protocols_Hooks.cpp:

          Added #include of tao/debug.h and made cosmetic changes to
          keep line lengths under 80 columns.

Fri Aug 29 07:45:30 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/PollableC.cpp:

          Fixed two occurrences of 'const const' in method signatures.
          Thanks to Johnny Willemsen <jwillemsen@remedy.nl> for
          pointing out the problem.

Thu Aug 28 22:04:40 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/IOP_IORC.h:

	  Made #undef of "IOR" (for HPUX) match the original one found in
	  corbafwd.h.  It is more generic.

	* tao/Object.h:
	* tao/Stub.h:
	* tao/corbafwd.h:

	  #undef "IOR" (for HPUX) after all headers have been included to
	  make sure it isn't indirectly redefined by other headers.
	  Addresses TAO HPUX build failures.

Thu Aug 28 19:15:44 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_1559/interceptors.cpp:
        * tests/Portable_Interceptors/Collocated/Dynamic/test_i.cpp:
        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Client_Task.cpp:

          Fixed compilation errors related to misused ACE error handling
	  macros.

Thu Aug 28 18:35:44 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Acceptor_Impl.cpp:

	  Include "tao/debug.h" for TAO_debug_level global variable.

	* tao/Any_Impl_T.cpp:
	* tao/Any_Basic_Impl_T.cpp:
	* tao/Any_Special_Impl_T.cpp:

	  Include "tao/Environment.h" for CORBA::Environment class.

	* tao/Any_Dual_Impl_T.cpp:

	  Include "tao/CDR.h" for TAO_{Input,Output}CDR types.

Thu Aug 28 17:34:51 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/performance-tests/RTEvent/lib/Auto_Functor.cpp
	  (~Auto_Functor):
	* orbsvcs/performance-tests/RTEvent/lib/ORB_Shutdown.inl
	  (ORB_Shutdown):

	  Fixed emulated exception macro.  "ACE_ENV_ARG_PARAMETER", not